# kr8tiv-launchpad

./: .dockerignore  .env.example  .gitignore  .lighthouserc.json  Anchor.toml  Makefile  README.md  SECURITY_CHECKLIST.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.claude/: HANDOFF.md
.github/workflows/: ci.yml  deploy-preview.yml  deploy-production.yml  deploy.yml  e2e.yml  load-test.yml  security.yml
apps/api/: .env.example  Dockerfile  jest.config.js  package.json  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma
apps/api/scripts/: security-audit.sh
apps/api/src/: app.ts  index.ts
apps/api/tests/: versioning.test.ts
apps/web/: .env.example  Dockerfile  instrumentation.ts  jest.config.js  jest.setup.js  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/__tests__/: ThemeProvider.test.tsx  analytics.test.ts  sentry.test.ts  setup.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/lib/: api.ts  (+8 more)
load-tests/: README.md  run-artillery.sh  run-k6.sh
load-tests/artillery/: config.yml  stress.yml
load-tests/k6/: config.js  soak-test.js  stress-test.js
nginx/: nginx.conf
programs/staking/: Cargo.toml
programs/staking/src/: errors.rs  lib.rs
programs/staking/src/instructions/: claim_rewards.rs  initialize.rs  mod.rs  stake.rs  unstake.rs
programs/staking/src/state/: mod.rs
tests/: staking.ts  tsconfig.json
(+226 files in other folders)
